#ifndef NETWORKSCENEMANAGER_H
#define NETWORKSCENEMANAGER_H

class NetworkSceneManager
{
public:
    void loadScene();
    void syncScene();
    void unloadScene();
};

#endif // NETWORKSCENEMANAGER_H