@startuml

class NetworkManager {
    
    
    + void startServer()
    + void startClient()
    + void startHost()
    + void shutdown()


    - mIsServer : bool
    - mIsClient : bool
    - mIsHost : bool
    - mTickRate : int
    - mDefaultPlayerPrefab : GameObject&
    - mEnableSceneManagement : bool
}

class NetworkObject implements Component {
    + getNetworkID(): int

    - mIsOwner: bool
    - mNetworkID: int
}

interface Component {}

interface INetworkBehaviour implements IBehaviourScript {
    +void serverRpc()
    +void clientRpc()
    + {abstract} void OnNetworkSpawn()
    
}

interface IBehaviourScript {}

' Template class for network variables
class NetworkVariable implements NetworkVariableBase{
    + setValue(T value) : void
    + getValue() : T

    - T mValue
    - bool mDirty
    
}

interface NetworkVariableBase {
    + {abstract} isDirty() : bool
    + {abstract} setClean() : void
}

class NetworkTransform {
    + UpdateTransform()
    + SyncPosition()
    + Interpolate()
}

class NetworkClient {
    + ConnectToServer()
    + SendGameState()
    + ReceiveGameState()

    - mIsConnected: bool
    - mClientID: int
}

class NetworkServer {
    + HandleClientConnection()
    + ReceiveGameState()
    + SendGameState()

    - mConnectedClients : List<NetworkClient>
}

class NetworkHost {
    + ActAsClient()
    + ActAsServer()
}

' class NetworkMessage {
'     + Serialize()
'     + Deserialize()
'     + SendMessage()
'     - mMessageType: string
' }

class NetworkSceneManager {
    + LoadScene()
    + SyncScene()
    + UnloadScene()
}

' class NetworkInputManager {
'     + CaptureInput()
'     + SendInput()
'     + ApplyInputPrediction()
' }

' class NetworkReplicationManager {
'     + ReplicateObjectState()
'     + SyncWithClients()
'     + ApplyInterpolation()
' }

' class AuthorityManager {
'     + AssignAuthority()
'     + RequestControl()
'     - mObjectAuthority: string
' }

interface INetworkSerializable {
    + serialize()
    + deserialize()
}

class NetworkInformation {}

class NetworkRegister {
    + instance() : NetworkRegister
    + RegisterType<T>() : void
    + CreateInstance(int) : T
}

NetworkManager *-- "0..1"NetworkClient
NetworkManager *-- "0..1"NetworkServer
NetworkManager *-- "0..1"NetworkHost
NetworkManager *-- "0..1"NetworkSceneManager
NetworkManager *-- "0..*" NetworkObject
' NetworkManager <-- AuthorityManager

NetworkObject *-- "0..*" INetworkBehaviour
NetworkObject -- NetworkTransform

INetworkBehaviour *-- "0..*" NetworkVariableBase


' NetworkClient --> NetworkInputManager
' NetworkClient --> NetworkMessage
' NetworkClient --> NetworkReplicationManager

' NetworkServer --> NetworkMessage
' NetworkServer --> NetworkReplicationManager


NetworkHost *-- "0..1"NetworkServer
NetworkHost *-- "0..1"NetworkClient

' AuthorityManager <-- NetworkObject
NetworkSceneManager *-- "*" NetworkObject

NetworkRegister o-- "0..*" INetworkSerializable
NetworkRegister --> NetworkManager
INetworkSerializable --> NetworkVariable


@enduml
